[workspace]
members = [
    "gl-core",
    "gl-cli"
]
resolver = "2"  # Required for edition 2021

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.0"
tracing = "^0.1"
clap = { version = "4.0", features = ["derive"] }
csv = "1.0"
serde_yaml = "0.9" 