[package]
name = "gl-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
gl-core = { path = "../gl-core" }
serde = { version = "1.0", features = ["derive"] }
csv = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_yaml.workspace = true
chrono.workspace = true
